[tool.poetry]
name = "finding-donors"
version = "0.1.0"
description = "Testing different supervised learning approaches from sklearn for Udacity's Introduction to ML with PyTorch Nanodegree."
authors = ["Gianluca Manca <gianluca.manca89@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "finding_donors"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
pandas = "^1.2.4"
scikit-learn = ">0.17.1"
matplotlib = "^3.7.1"
ipykernel = "^6.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
